spring-rest/src/main/java/com/example/spring_rest/error/ProdutoNullException.java
package com.example.spring_rest.error;

public class ProdutoNullException extends RuntimeException {

    public ProdutoNullException(String msg){
        super(msg);
    }
}
